--- a/Parks.html
+++ b/Parks.html
@@ -2,7 +2,7 @@
 <html>
  <head>
   <title>Explore Our Parks</title>
-  <link href= "explore.css" rel="stylesheet" type="text/css" />
+  <link href= "Parks.css" rel="stylesheet" type="text/css" />
     </head>
   <body>
   <div id="wrap">
